# Hackathon-project

./: .mypy.ini  .ruff.toml  Dockerfile  README.md  alembic.ini  config.yaml  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AccountPage.jsx  AuthContext.jsx  FileList.jsx  FileUploader.jsx  Header.jsx  LoginForm.jsx  ProtectedRoute.jsx  RegistrationForm.jsx  SharedFileList.jsx  SharedFilesPage.jsx
src/: main.py
src/app/: asgi.py  main.py  models.py
src/app/alembic/: env.py
src/app/alembic/versions/: 005e214c397e_add_model_user.py  09e16db08154_12121.py  0f7b330c5811_12121.py  118f19aa2a06_add_two_table.py  2b8d6db94ada_12121.py  31072030c4e8_12121.py  327838e40ad6_updated_user.py  648ddf0a83fd_12121.py  690a9736b35f_12121.py  77003faedca5_added_teacher_and_student.py  89496adf3ecd_initial.py  97d9f8a328fa_12121.py  d30423c3044f_updated_tables.py  e362a6e5ac61_initial.py  ee4252824336_no_teacher_student.py  f0745e889093_abstract_user.py  f67ac4a1f519_12121.py
src/app/core/: config.py  database.py
src/app/resources/: file_router.py  user_router.py
src/app/schemas/: shemas.py
src/app/services/: auth.py  s3.py
src/app/tasks/: celery.py  email_templates.py  tasks.py
